--- a/redash-deployment-setup/redash-deployment.yaml
+++ b/redash-deployment-setup/redash-deployment.yaml
@@ -43,7 +43,7 @@ spec:
       serviceAccountName: redash-sa
       containers:
         - name: redash
-          image: 923083696216.dkr.ecr.us-east-2.amazonaws.com/redash:10.1.0.b50633
+          image: xxxxx.dkr.ecr.us-east-2.amazonaws.com/redash:10.1.0.b50633
           imagePullPolicy: Always
           ports:
             - containerPort: 5000
@@ -61,7 +61,7 @@ spec:
               cpu: "0.5"
             limits:
               memory: "2Gi"
-              cpu: "1"
+              cpu: "2"
       volumes:
         - name: redash-storage
           persistentVolumeClaim:
